...
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.chowpals.chowmein.MainActivity"
    tools:showIn="@layout/app_bar_main">


    <android.support.v7.widget.CardView
        android:id="@+id/welcomeMessageCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"

        android:layout_marginTop="16dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:id="@+id/welcomeMessageConstraintView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/welcomeMessageTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:text="@string/welcome_to_chow_me_in"
...
                android:textStyle="bold|italic" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/createChowCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcomeMessageCardView"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:id="@+id/createChowConstraintView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical">

            <Button
                android:id="@+id/createChowButton"
...
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:id="@+id/searchChowConstraintView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/chowsCreatedByUser"
                android:layout_width="match_parent"
...
                android:layout_below="@+id/chowsCreatedByUser"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0" />

            <ListView
                android:id="@+id/searchChowListViewMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/chowsSearchViewMain"
                android:layout_marginBottom="8dp" />

        </RelativeLayout>
...
