<resources>
    <string name="app_name">Chow Me-In</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_view_chow">ViewChowActivity</string>
    <string name="food_post_name_here">Chow Post Name Here</string>
    <string name="food_post_location_here">Chow Post Location Here</string>
    <string name="food_post_time_here">Hour:Minute:AM/PM</string>
    <string name="food_post_description_here">Chow Post Description Here</string>
    <string name="chow_me_in">Chow Me In</string>
    <string name="title_activity_create_chow">Create a Chow</string>
    <string name="title_activity_search_chow">Search for a Chow</string>
    <string name="got_food_to_offer_create_a_chow_here">Got food to offer? Create a Chow here!</string>
    <string name="welcome_to_chow_me_in">Welcome to Chow Me In!</string>
    <string name="search_existing_chows_here">Search existing Chows here!</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to config -->
    <string name="base_url">https://api.chowme-in.com</string>
    <string name="CALLING_CLASS">Calling Class</string>
...
    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="submit_chow">Submit Chow</string>
    <string name="verify_chow">Verify Chow</string>
    <string name="title_activity_login">login</string>
    <string name="login_username">User Name</string>
    <string name="title_activity_view_my_chows">ViewMyChowsActivity</string>
    <string name="chows_you_have_joined">Chows you have joined!</string>
    <string name="chows_created_by_you">Chows created by you!</string>
</resources>
...
